Responsiveness for Mobile

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <header>
         <h1>Enellas Kahoots!</h1>
     </header>
-    <aside class="points-display">0</aside>
-    <button id="player-change">Ändra spelare</button>
+    <section id="sub-header-row">
+        <aside class="points-display">0</aside>
+        <button id="player-change">Ändra spelare</button>
+    </section>
+    
     <input id="checkbox" type="checkbox">
 
     <aside class="highscore-display">
